--- a/faq.html
+++ b/faq.html
@@ -24,9 +24,9 @@
                     <div class="fourteen wide computer sixteen wide tablet column">
                         <div class="header-container">
                             <div class="ui secondary menu">
-                                <a class="item" href="/">引言</a>
-                                <a class="item" href="/MulanPSL.html">许可证</a>
-                                <a class="active item" href="/faq.html">常见问题</a>
+                                <a class="item" href="./index.html">引言</a>
+                                <a class="item" href="./MulanPSL.html">许可证</a>
+                                <a class="active item" href="">常见问题</a>
                             </div>
                         </div>
                     </div>
